fix: select options z-index on top of the search element

--- a/fancy-weather/src/components/select-box/select-box.scss
+++ b/fancy-weather/src/components/select-box/select-box.scss
@@ -78,6 +78,7 @@
   &__options {
     & {
       position: absolute;
+      z-index: 1;
 
       width: 100%;
       height: 0;
